--- a/stack_git.yaml
+++ b/stack_git.yaml
@@ -53,6 +53,8 @@ flags:
   accelerate-fft:
     llvm-ptx: false
     llvm-cpu: false
+  TestSeq:
+    llvm-ptx: true
 #  accelerate-llvm-native:
 #    unsafe-checks: true
 #    internal-checks: true
