--- a/stack_git.yaml
+++ b/stack_git.yaml
@@ -14,6 +14,9 @@ packages:
 #- ../../accelerate-llvm/accelerate-llvm-native
 #- ../../llvm-hs/llvm-hs
 #- ../../llvm-hs/llvm-hs-pure
+#- /mnt/cyclone/spin1/larsvdh/accelerate-llvm/accelerate-llvm-ptx
+- ../accelerate-llvm/accelerate-llvm-ptx
+- .
 
 
 # Dependency packages to be pulled from upstream that are not in the resolver
@@ -26,7 +29,7 @@ extra-deps:
   subdirs:
     - accelerate-llvm
     - accelerate-llvm-native
-    - accelerate-llvm-ptx
+#    - accelerate-llvm-ptx 
 
 - git:    https://github.com/sakehl/accelerate-fft.git
   commit: b55361add3173efe2ada3d82ddf983ae8ec9e175
@@ -44,7 +47,8 @@ extra-deps:
 
 - vector-0.12.0.1
 - pretty-1.1.3.6
-- cuda-0.8.0.0
+#- cuda-0.8.0.0
+- cuda-0.10.1.0
 
 # Override default flag values for local packages and extra-deps
 flags:
@@ -55,6 +59,7 @@ flags:
     llvm-cpu: false
   TestSeq:
     llvm-ptx: true
+
 #  accelerate-llvm-native:
 #    unsafe-checks: true
 #    internal-checks: true
