--- a/stack_paths.yaml
+++ b/stack_paths.yaml
@@ -67,7 +67,7 @@ flags:
   accelerate-fft:
     llvm-ptx: false
     llvm-cpu: false
-  TestSeq:
+  testseq:
     llvm-ptx: false
 #  accelerate-llvm-native:
 #    unsafe-checks: true
