--- a/stack_git.yaml
+++ b/stack_git.yaml
@@ -22,7 +22,7 @@ packages:
 # Dependency packages to be pulled from upstream that are not in the resolver
 extra-deps:
 - git:    https://github.com/sakehl/accelerate.git
-  commit: 7ba4857f6f322588bc2e446ecdfd5f8c482ecdff
+  commit: 0a7351b5c1f60c48107cf7a7e4843d9b1566f6a4
 
 - git:    https://github.com/sakehl/accelerate-llvm.git
   commit: 34db99d1bdab96027d0f71a931212944ea1a4018
@@ -32,7 +32,8 @@ extra-deps:
 #    - accelerate-llvm-ptx 
 
 - git:    https://github.com/sakehl/accelerate-fft.git
-  commit: b55361add3173efe2ada3d82ddf983ae8ec9e175
+  commit: ff02cafe0f619aaaad893bebf2213de74590fd90
+# - accelerate-fft-1.1.0.0
 
 - git: https://github.com/sakehl/llvm-hs.git
   commit: e733ec05c36bab0f3c4f669ada40e6a1416c7c2c
@@ -49,14 +50,17 @@ extra-deps:
 - pretty-1.1.3.6
 #- cuda-0.8.0.0
 - cuda-0.10.1.0
+- file-embed-0.0.11
+- cufft-0.9.0.1
+
 
 # Override default flag values for local packages and extra-deps
 flags:
   accelerate:
     debug: false
   accelerate-fft:
-    llvm-ptx: false
-    llvm-cpu: false
+    llvm-ptx: true
+    llvm-cpu: true
   TestSeq:
     llvm-ptx: true
 
