--- a/stack_git.yaml
+++ b/stack_git.yaml
@@ -15,7 +15,7 @@ packages:
 #- ../../llvm-hs/llvm-hs
 #- ../../llvm-hs/llvm-hs-pure
 #- /mnt/cyclone/spin1/larsvdh/accelerate-llvm/accelerate-llvm-ptx
-- ../accelerate-llvm/accelerate-llvm-ptx
+# - ../accelerate-llvm/accelerate-llvm-ptx
 - .
 
 
@@ -25,11 +25,11 @@ extra-deps:
   commit: 0a7351b5c1f60c48107cf7a7e4843d9b1566f6a4
 
 - git:    https://github.com/sakehl/accelerate-llvm.git
-  commit: 34db99d1bdab96027d0f71a931212944ea1a4018
+  commit: cd7f0d451fbfc85ab8782e6d229cf92fa6aa3faa
   subdirs:
     - accelerate-llvm
     - accelerate-llvm-native
-#    - accelerate-llvm-ptx 
+    - accelerate-llvm-ptx 
 
 - git:    https://github.com/sakehl/accelerate-fft.git
   commit: ff02cafe0f619aaaad893bebf2213de74590fd90
