Some timing of compile time, and new script

--- a/TestSeq.cabal
+++ b/TestSeq.cabal
@@ -54,7 +54,8 @@ library
         criterion,
         deepseq,
         lens,
-        lens-accelerate
+        lens-accelerate,
+        time
 
     if flag(llvm-ptx)
         cpp-options:        -DACCELERATE_LLVM_PTX_BACKEND
