--- a/FourierTest.cabal
+++ b/FourierTest.cabal
@@ -1,15 +1,15 @@
 cabal-version: 1.12
-name: TestSeq
+name: FourierTest
 version: 0.1.0.0
 license: BSD3
 license-file: LICENSE
 copyright: 2019 Author name here
 maintainer: example@example.com
 author: Author name here
-homepage: https://github.com/githubuser/TestSeq#readme
-bug-reports: https://github.com/githubuser/TestSeq/issues
+homepage: https://github.com/githubuser/FourierTest#readme
+bug-reports: https://github.com/githubuser/FourierTest/issues
 description:
-    Please see the README on GitHub at <https://github.com/githubuser/TestSeq#readme>
+    Please see the README on GitHub at <https://github.com/githubuser/FourierTest#readme>
 build-type: Simple
 extra-source-files:
     README.md
@@ -25,7 +25,7 @@ flag llvm-ptx
 
 source-repository head
     type: git
-    location: https://github.com/sakehl/TestSeq
+    location: https://github.com/sakehl/FourierTest
 
 library
     exposed-modules:
@@ -37,7 +37,7 @@ library
         c++/multi.cpp
     hs-source-dirs: src
     other-modules:
-        Paths_TestSeq
+        Paths_FourierTest
     default-language: Haskell2010
     extra-libraries:
         pthread
@@ -68,15 +68,15 @@ library
         exposed-modules:
             GPUFFT
 
-executable TestSeq-exe
+executable FourierTest-exe
     main-is: Main.hs
     hs-source-dirs: app
     other-modules:
-        Paths_TestSeq
+        Paths_FourierTest
     default-language: Haskell2010
     ghc-options: -threaded -rtsopts -with-rtsopts=-N -O
     build-depends:
-        TestSeq -any,
+        FourierTest -any,
         base >=4.7 && <5,
         accelerate -any,
         accelerate-llvm -any,
@@ -89,14 +89,14 @@ executable TestSeq-exe
         build-depends:
             accelerate-llvm-ptx
 
-test-suite TestSeq-test
+test-suite FourierTest-test
     type: exitcode-stdio-1.0
     main-is: Spec.hs
     hs-source-dirs: test
     other-modules:
-        Paths_TestSeq
+        Paths_FourierTest
     default-language: Haskell2010
     ghc-options: -threaded -rtsopts -with-rtsopts=-N
     build-depends:
-        TestSeq -any,
+        FourierTest -any,
         base >=4.7 && <5
