--- a/stack_git.yaml
+++ b/stack_git.yaml
@@ -21,28 +21,35 @@ packages:
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 extra-deps:
-- git:    https://github.com/sakehl/accelerate.git
-  commit: 4c4c6c626a2ab3f6274e38ce83503c4ba6099124
+- git:    https://github.com/AccelerateHS/accelerate
+  commit: a9c46204c076e4ac916dda13a0b3d8e2b1f93d7e
 
-- git:    https://github.com/sakehl/accelerate-llvm.git
-  commit: 02349baa60676bf21e16a869b1f6f939aa672289
+- git:    https://github.com/AccelerateHS/accelerate-llvm.git
+  commit: f8aeee621e5aa3de92e4da12441964120ec4f75c
   subdirs:
     - accelerate-llvm
     - accelerate-llvm-native
     - accelerate-llvm-ptx 
 
-- git:    https://github.com/sakehl/accelerate-fft.git
-  commit: 2f1a5d1201b0ac565b869810b82f0884fb2312fe
-# - accelerate-fft-1.1.0.0
+# - git:    https://github.com/AccelerateHS/accelerate-fft.git
+#   commit: 24de1074001142bf02009ed36479dc9e8e045c61
+# - accelerate-fft-1.2.0.0
 
-- git: https://github.com/sakehl/llvm-hs.git
-  commit: e733ec05c36bab0f3c4f669ada40e6a1416c7c2c
-  subdirs:
-    - llvm-hs
-    - llvm-hs-pure
+# - git: https://github.com/sakehl/llvm-hs.git
+#   commit: e733ec05c36bab0f3c4f669ada40e6a1416c7c2c
+#   subdirs:
+#     - llvm-hs
+#     - llvm-hs-pure
+- llvm-hs-8.0.0
+- llvm-hs-pure-8.0.0
 
 - lens-accelerate-0.2.0.0
-- accelerate-io-1.0.0.1
+
+- git:    https://github.com/AccelerateHS/accelerate-io.git
+  commit: e83461b194bb046a6f129a6be7f0e865653ed365
+  subdirs:
+    - accelerate-io-vector
+# - accelerate-io-1.2.0.0
 
 - repa-3.4.1.4
 
@@ -58,9 +65,9 @@ extra-deps:
 flags:
   accelerate:
     debug: false
-  accelerate-fft:
-    llvm-ptx: true
-    llvm-cpu: true
+  # accelerate-fft:
+  #   llvm-ptx: true
+  #   llvm-cpu: true
   FourierTest:
     llvm-ptx: true
 
