--- a/stack_git.yaml
+++ b/stack_git.yaml
@@ -17,32 +17,38 @@ packages:
 #- /mnt/cyclone/spin1/larsvdh/accelerate-llvm/accelerate-llvm-ptx
 #- ../accelerate-llvm/accelerate-llvm-ptx
 - .
-
+# - ../accelerate-llvm/accelerate-llvm
+# - ../accelerate-llvm/accelerate-llvm-ptx
+# - ../accelerate
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 extra-deps:
-- git:    https://github.com/sakehl/accelerate.git
-  commit: 4c4c6c626a2ab3f6274e38ce83503c4ba6099124
+- git:    https://github.com/ivogabe/accelerate.git
+  commit: 17d06cbd18140922bedfdd0c253c21c6df493aab
 
 - git:    https://github.com/sakehl/accelerate-llvm.git
-  commit: 02349baa60676bf21e16a869b1f6f939aa672289
+  commit: 68cfb873fce62b4ef0710506db598afd6cc9478e
   subdirs:
     - accelerate-llvm
     - accelerate-llvm-native
     - accelerate-llvm-ptx 
 
+
 - git:    https://github.com/sakehl/accelerate-fft.git
   commit: 2f1a5d1201b0ac565b869810b82f0884fb2312fe
 # - accelerate-fft-1.1.0.0
 
-- git: https://github.com/sakehl/llvm-hs.git
-  commit: e733ec05c36bab0f3c4f669ada40e6a1416c7c2c
-  subdirs:
-    - llvm-hs
-    - llvm-hs-pure
+# - git: https://github.com/sakehl/llvm-hs.git
+#   commit: e733ec05c36bab0f3c4f669ada40e6a1416c7c2c
+#   subdirs:
+#     - llvm-hs
+#     - llvm-hs-pure
 
 - lens-accelerate-0.2.0.0
 - accelerate-io-1.0.0.1
+
+- llvm-hs-9.0.0
+- llvm-hs-pure-9.0.0
 
 - repa-3.4.1.4
 
