--- a/FourierTest.cabal
+++ b/FourierTest.cabal
@@ -44,14 +44,10 @@ library
         accelerate-llvm-native -any,
         llvm-hs -any,
         llvm-hs-pure -any,
-        carray -any,
         fft -any,
         accelerate-fft,
-        criterion,
-        deepseq,
         lens,
         lens-accelerate,
-        time,
         vector,
         bytestring
 
@@ -60,9 +56,7 @@ library
         build-depends:
             accelerate-llvm-ptx,
             cuda,
-            cufft,
-            bytestring,
-            file-embed
+            cufft
 
 executable FourierTest-exe
     main-is: Main.hs
@@ -78,22 +72,9 @@ executable FourierTest-exe
         accelerate-llvm -any,
         accelerate-llvm-native -any,
         llvm-hs -any,
-        llvm-hs-pure -any,
-        criterion
+        llvm-hs-pure -any
 
     if flag(llvm-ptx)
         cpp-options:        -DACCELERATE_LLVM_PTX_BACKEND
         build-depends:
             accelerate-llvm-ptx
-
-test-suite FourierTest-test
-    type: exitcode-stdio-1.0
-    main-is: Spec.hs
-    hs-source-dirs: test
-    other-modules:
-        Paths_FourierTest
-    default-language: Haskell2010
-    ghc-options: -threaded -rtsopts -with-rtsopts=-N
-    build-depends:
-        FourierTest -any,
-        base >=4.7 && <5
